@@ -1,7 +1,8 @@
 lib_LTLIBRARIES = libvoikko.la
 libvoikko_la_SOURCES = voikko_suggest.c voikko_utils.c voikko_setup.c voikko_spell.c \
                        voikko_hyphenate.c voikko_charset.c porting.c \
-                       voikko_tokenize.c sentence.c grammar.c gccache.c
+                       voikko_tokenize.c sentence.c grammar.c gccache.c \
+                       gcerror.c gcanalysis.c
 libvoikko_la_LDFLAGS = -lmalaga -no-undefined -version-info 8:0:7 @LIBLDFLAGSWIN@
 bin_PROGRAMS = voikkospell voikkohyphenate voikkogc
 voikkospell_SOURCES = voikkospell.c porting.c
@@ -18,7 +19,7 @@ voikkogc_LDADD = libvoikko.la
 pkginclude_HEADERS = voikko.h
 noinst_HEADERS = voikko_utils.h voikko_setup.h voikko_spell.h voikko_charset.h \
                  voikko_hyphenate.h voikko_defs.h porting.h voikko_suggest.h \
-                 gccache.h
+                 gccache.h gcerror.h gcanalysis.h
 
 dist_man_MANS = voikkospell.1 voikkohyphenate.1 voikkogc.1
 
