@@ -1,3 +1,9 @@
+2008-07-02 Harri Pitkänen <hatapitk@iki.fi>
+
+	* Work on grammar checker.
+	* Increase library version number to 2.0.
+	* Update README.
+
 2008-07-01 Harri Pitkänen <hatapitk@iki.fi>
 
 	* Split and update manual pages.
